--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "jest": "^24.8.0",
+    "babel-jest": "^24.8.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
@@ -46,5 +49,16 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    }
+  }
 }
